--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,13 @@ async-timeout==3.0.1
 attrs==20.1.0
 bcrypt==3.1.7
 beautifulsoup4==4.9.1
+black==19.10b0
 blinker==1.4
 Brlapi==0.7.0
 certifi==2019.11.28
 chardet==3.0.4
 chrome-gnome-shell==0.0.0
+click==7.1.2
 command-not-found==0.3
 cryptography==2.8
 cupshelpers==1.0
@@ -56,6 +58,8 @@ oauthlib==3.1.0
 olefile==0.46
 packaging==20.4
 paramiko==2.6.0
+pathspec==0.8.0
+pbr==5.4.5
 pexpect==4.6.0
 Pillow==7.0.0
 pluggy==0.13.1
@@ -84,6 +88,7 @@ pytz==2019.3
 pywinrm==0.3.0
 pyxdg==0.26
 PyYAML==5.3.1
+regex==2020.7.14
 reportlab==3.5.34
 requests==2.22.0
 requests-kerberos==0.12.0
@@ -97,8 +102,10 @@ six==1.15.0
 soupsieve==2.0.1
 ssh-import-id==5.10
 systemd-python==234
+testresources==2.0.1
 toml==0.10.1
 tqdm==4.48.2
+typed-ast==1.4.1
 typing-extensions==3.7.4.2
 ubuntu-advantage-tools==20.3
 ubuntu-drivers-common==0.0.0
